--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,18 @@ header {
   color: $secondary-color;
 }
 
+.fa {
+  color: black;
+}
+
+// .fa-twitter {
+//   // color: 
+// }
+
+// .fa-twitter:hover {
+
+// }
+
 main {
   padding: 4rem;
   // height: 100%;
